@@ -1,3 +1,7 @@
+2005-01-31  Dan Dennedy <dan@dennedy.org>
+	* *.S: apply patch from Nicholas Miell <nmiell@gmail.com>
+	  to not require execution stack for assembler functions.
+
 2004-12-20  Dan Dennedy <dan@dennedy.org>
 	* vlc.h, mmx.h: apply patch from Daniel Kobras to improve
 	  compile compatibillity by making extern inlinei, static inline..
